kind-cluster-pod-k3s.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kind-cluster
  labels:
    app: kind-cluster
spec:
  containers:
  - name: run-cluster
    image: localhost/kind
    imagePullPolicy: IfNotPresent
    securityContext:
      privileged: true
      readOnlyRootFilesystem: true
    command:
    - bash
    - -c
    - 'trap : TERM INT ; podman start --all && sleep infinity & wait'
    lifecycle:
      preStop:
        exec:
          command: ['podman', 'stop', '--all', '-t', '28']
    volumeMounts:
    - mountPath: /var/lib/containers
      name: var-lib-containers
    - mountPath: /etc/containers/networks/kind.json
      name: podman-config
      subPath: kind-network.json
      readOnly: true
    - mountPath: /run
      name: podman-run-tmp
    - mountPath: /tmp
      name: podman-run-tmp
  volumes:
  - name: var-lib-containers
    persistentVolumeClaim:
      claimName: kind-pvc
  - name: podman-config
    configMap:
      name: podman-config
  - name: init-c-run-tmp
    emptyDir: {}
  - name: podman-run-tmp
    emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: kind-cluster
spec:
  selector:
    app: kind-cluster
  ports:
  - name: https
    protocol: TCP
    port: 6443
---
