kind-cluster-pod-openshift.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kind-cluster
  labels:
    app: kind-cluster
spec:
  containers:
  - name: run-cluster
    image: image-registry.openshift-image-registry.svc:5000/kind/kind
    imagePullPolicy: IfNotPresent
    securityContext:
      privileged: true
      readOnlyRootFilesystem: true
    command:
    - bash
    - -c
    - 'podman start --all && sleep infinity'
    volumeMounts:
    - mountPath: /var/lib/containers
      name: var-lib-containers
    - mountPath: /etc/containers/networks/kind.json
      name: podman-config
      subPath: kind-network.json
      readOnly: true
    - mountPath: /run
      name: podman-run-tmp
    - mountPath: /tmp
      name: podman-run-tmp
  - name: api-proxy
    image: docker.io/library/nginx:stable
    imagePullPolicy: IfNotPresent
    securityContext:
      readOnlyRootFilesystem: true
    command:
    - /usr/sbin/nginx
    volumeMounts:
    - mountPath: /etc/nginx/nginx.conf
      name: nginx-config
      subPath: nginx.conf
      readOnly: true
    - mountPath: /run
      name: nginx-run-cache
    - mountPath: /var/cache/nginx
      name: nginx-run-cache
  volumes:
  - name: var-lib-containers
    persistentVolumeClaim:
      claimName: kind-pvc
  - name: podman-config
    configMap:
      name: podman-config
  - name: nginx-config
    configMap:
      name: nginx-config
  - name: init-c-run-tmp
    emptyDir: {}
  - name: podman-run-tmp
    emptyDir: {}
  - name: nginx-run-cache
    emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: kind-cluster
spec:
  selector:
    app: kind-cluster
  ports:
  - protocol: TCP
    port: 6080
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: kind-cluster-api
spec:
  tls:
    termination: edge
  to:
    kind: Service
    name: kind-cluster
